--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,3 @@
-workspace = { members = ["calibrator"] }
 [package]
 name = "home-leds"
 version = "0.1.0"
@@ -35,11 +34,11 @@ futures-util = { version = "0.3.29", default-features = false }
 log = { version = "0.4.20" }
 smart-leds = "0.3.0"
 dnsparse = "0.3.0"
+num-traits = { version = "0.2.17", default-features = false, features = ["libm"] }
 
 [patch.crates-io]
 embassy-sync     = { git = "https://github.com/embassy-rs/embassy/", rev = "ff3baf1" }
 embassy-time     = { git = "https://github.com/embassy-rs/embassy/", rev = "ff3baf1" }
-embassy-executor = { git = "https://github.com/embassy-rs/embassy/", rev = "ff3baf1" }
 embassy-net      = { git = "https://github.com/embassy-rs/embassy/", rev = "ff3baf1" }
 
 
@@ -78,8 +77,9 @@ embassy-net      = { git = "https://github.com/embassy-rs/embassy/", rev = "ff3b
 # ]
 
 [profile.dev]
-opt-level = 1
+opt-level = 2
 overflow-checks = false
 
-[profile.dev.package.esp-wifi]
+[profile.dev.package."*"]
 opt-level = 3
+overflow-checks = false
