--- a/firmware/Cargo.toml
+++ b/firmware/Cargo.toml
@@ -6,41 +6,42 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-esp32c3-hal = { version = "0.13.0", features = [ "embassy", "async", "rt", "embassy-time-timg0", "log"] }
-esp-hal-common = { version = "0.13.1", features = [ "embassy-executor-thread" ] }
+esp32c3-hal = { version = "0.14.0", features = [ "embassy", "async", "rt", "embassy-time-timg0", "log"] }
+esp-hal-common = { version = "0.14.1", features = [ "embassy-executor-thread" , "esp-riscv-rt", "esp32c3"] }
 esp-backtrace = { version = "0.9.0", features = [ "esp32c3", "panic-handler", "exception-handler", "print-uart" ] }
 esp-println = { version = "0.7.1", features = ["esp32c3", "log"] }
 esp-alloc = { version = "0.3.0" }
-esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "0db7a70", features = [
+esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "a69545dc", features = [
     "esp32c3",
     "async",
-    "embedded-svc",
     "embassy-net",
     "wifi",
+    "coex",
 ] }
 embedded-svc = { version = "0.26.4", default-features = false, features = [ "log" ] }
 embedded-io = "0.6.1"
-embedded-io-async = "0.6.0"
-embassy-sync = "0.4.0"
-embassy-time = { version = "0.1.3", features = ["nightly"] }
-embassy-executor = { version = "=0.3.2", features = [ "nightly", "log", "executor-thread", "integrated-timers" , "arch-riscv32"] }
+embedded-io-async = "0.6.1"
+embassy-sync = "0.5.0"
+embassy-time = { version = "0.2.0" }
+embassy-executor = { version = "=0.4.0", features = [ "log", "integrated-timers" , "arch-riscv32", "task-arena-size-40960"] }
 embassy-net = { version = "0.2.1", features = [
-    "nightly",
     "udp", "igmp",
     "dhcpv4",
     "medium-ethernet",
 ] }
-futures-util = { version = "0.3.29", default-features = false }
+futures-util = { version = "0.3.30", default-features = false }
 log = { version = "0.4.20" }
 smart-leds = "0.3.0"
 dnsparse = "0.3.0"
 num-traits = { version = "0.2.17", default-features = false, features = ["libm"] }
 
 [patch.crates-io]
-embassy-sync     = { git = "https://github.com/embassy-rs/embassy/", rev = "ff3baf1" }
-embassy-time     = { git = "https://github.com/embassy-rs/embassy/", rev = "ff3baf1" }
-embassy-net      = { git = "https://github.com/embassy-rs/embassy/", rev = "ff3baf1" }
-
+embassy-net = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-net", rev = "14f41a71"}
+embassy-time = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-time", rev = "14f41a71"}
+embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor", rev = "14f41a71"}
+embassy-executor-macros = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor-macros", rev = "14f41a71"}
+embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-sync", rev = "14f41a71"}
+embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-futures", rev = "14f41a71"}
 
 # atomic-waker     = { version = "1.1.2", features = ["portable-atomic"] }
 # portable-atomic  = { version = "1.5.1", features = ["fallback", "critical-section"] }
@@ -78,7 +79,7 @@ embassy-net      = { git = "https://github.com/embassy-rs/embassy/", rev = "ff3b
 
 [profile.dev]
 opt-level = 2
-overflow-checks = false
+# overflow-checks = false
 
 [profile.dev.package."*"]
 opt-level = 3
