--- a/firmware/Cargo.toml
+++ b/firmware/Cargo.toml
@@ -29,6 +29,7 @@ embassy-net = { version = "0.2.1", features = [
     "dhcpv4",
     "medium-ethernet",
 ] }
+critical-section = "1.1.2"
 futures-util = { version = "0.3.30", default-features = false }
 log = { version = "0.4.20" }
 smart-leds = "0.3.0"
