--- a/control/Cargo.toml
+++ b/control/Cargo.toml
@@ -7,4 +7,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.78"
+config = "0.13.4"
+dirs = "5.0.1"
+home-assistant-rest = "0.2.0"
 rand = "0.8.5"
+serde = { version = "1.0.195", features = ["derive"] }
+serde_json = "1.0.111"
+tokio = { version = "1.35.1", features = ["rt-multi-thread", "net", "macros"] }
